# $Id$

2006-11-28
	* Rearrange retry attempts in pop3 and imap code, removing sleep() 
	calls which cause the whole process to sleep, not just the thread.

2006-11-22
	* Added max_specials config item with default 512.  This should
	close bug #1574523 for real this time.  Thanks to John Harrigan
	<jfharrigan@fedex.com> for this one.

2006-11-21
	* Changed autotools for subversion versioning.
	* Updated svn ebuild for gentoo.
	* Documentation updates for clarity, i.e. close bug #1599041.

2006-11-20
	* fix compile error with --disable-xdamage when Xdamage.h not present.

2006-11-18
	* fix bug where present rate var was not being read from acpi battery
	state file: /proc/acpi/battery/%s/state.

2006-11-15
	* Change linkstatus display for use_spacer.  Closes bug #1577580.

2006-11-14
	* Fix compile error with --disable-x11.
	* Add new timed thread abstraction routines.
	* Convert thread activity to timed threads, including
	texeci, imap, pop3, audacious.
	* Change memory vars from unsigned long to unsigned long long
	to fix reported overflow, e.g. swapmax >= 4Gb.

2006-11-13
	* Use pthread_cond_timedwait() instead of sleep() in audacious
	thread.  Will convert all worker threads to this timing method.  

2006-11-12
	* Fix freebsd build error.
	* Minor changes to syntax files.
	* Conky 1.4.4 released.

2006-11-11
	* Add max_user_text to documentation.
	* Fixed BadWindow bugs (#1568366, #1588384).

2006-11-10
	* Remove on_bottom and xmms_player completely.
	* Closed ibm_temps bug #1591609.
	* Conky 1.4.3 released.

2006-11-09
	* Updated vim and nano syntax coloring scripts.
	* Added extras/ dir with syntax stuff to distribution tarball.

2006-11-08
	* Added new config item 'max_user_text' with default 16384,
	twice as large as previous hard-coded default of 8192 bytes.
	Increase as needed to accomodate large config files with a
	great deal of text.  This closes SF bug #1574523.

2006-11-07
	* Changes to configure.ac for pkg-config on x11/xext/xdamage,