@@ -520,6 +520,18 @@ Download speed graph, colours defined in hex, minus the #. If scale is non-zero,
 Text to show if any of the above are not true
 
 .TP 
+\fB\*(T<\fBentropy_avail\fR\*(T>\fR 
+Current entropy available for crypto freaks
+
+.TP 
+\fB\*(T<\fBentropy_bar\fR\*(T>\fR \*(T<\fB(height),(width)\fR\*(T> 
+Normalized bar of available entropy for crypto freaks
+
+.TP 
+\fB\*(T<\fBentropy_poolsize\fR\*(T>\fR 
+Total size of system entropy pool for crypto freaks
+
+.TP 
 \fB\*(T<\fBexec\fR\*(T>\fR \*(T<\fBcommand\fR\*(T> 
 Executes a shell command and displays the output in conky. warning: this takes a lot more resources than other variables. I'd recommend coding wanted behaviour in C and posting a patch.
 
